--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -60,6 +60,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
     </dependencies>
 
 </project>
