Initial commit Tweet CRD

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -75,6 +75,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.0.0.Alpha7</version>
+		</dependency>
 	</dependencies>
 
 </project>
