--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>user-service</module>
     <module>eureka-server</module>
     <module>gateway</module>
+    <module>tweet-crd</module>
   </modules>
 
   <name>Cardinalis-BE</name>
