--- a/tweet-service/pom.xml
+++ b/tweet-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<packaging>jar</packaging>
-	<artifactId>tweet-crd</artifactId>
-	<name>tweet-crd</name>
-	<description>Cardinalis Tweet CRD</description>
+	<artifactId>tweet-service</artifactId>
+	<name>tweet-service</name>
+	<description>Cardinalis Tweet Service</description>
 
 	<properties>
 		<java.version>17</java.version>
