--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8091
 spring:
   application:
-    name: tweet-crd
+    name: tweet-service
   datasource:
-#    password: tnhK$ct21720#
-    password: 131001
+    password: tnhK$ct21720#
+#    password: 131001
     url: jdbc:postgresql://localhost:5432/cardinalis
     username: postgres
   jpa:
