add auto generate time when create tweet, docker tweet-service

--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -4,10 +4,9 @@ spring:
   application:
     name: tweet-service
   datasource:
-    password: tnhK$ct21720#
-#    password: 131001
+    password: '131001'
     url: jdbc:postgresql://localhost:5432/cardinalis
-    username: postgres
+    username: 'postgres'
   jpa:
     hibernate:
       ddl-auto: create-drop
