--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,19 @@
-services:
+xservices:
+  tweet-service:
+    container_name: tweet-service
+    image: cardinalis/tweet-service
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 131001
+      PGDATA: /data/postgres
+    volumes:
+      - tweet-service:/data/postgres
+    ports:
+      - "3306:3306"
+    networks:
+      - postgres
+    restart: unless-stopped
+
   postgres:
     container_name: postgres
     image: postgres
@@ -13,6 +28,7 @@ services:
     networks:
       - postgres
     restart: unless-stopped
+
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -28,12 +44,14 @@ services:
       - postgres
     restart: unless-stopped
 
+
+volumes:
+  tweet-service:
+  postgres:
+  pgadmin:
+
 networks:
   postgres:
     driver: bridge
   spring:
     driver: bridge
-
-volumes:
-  postgres:
-  pgadmin:
