--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "http://localhost:9002"
+            allowedOrigins: "*"
             allowedHeaders: "*"
             allowedMethods:
               - GET
