Deploy working with both services

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -9,14 +9,14 @@ spec:
   rules:
       - http:
           paths:
-            - path: /tweet
+            - path: /tweet/*
               pathType: ImplementationSpecific
               backend:
                 service:
                   name: tweet-service
                   port:
                     number: 8080
-            - path: /user
+            - path: /user/*
               pathType: ImplementationSpecific
               backend:
                 service:
