Test github oauth2

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -16,6 +16,14 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id:  ${GITHUB_CLIENT_ID:581a14a284dd1d5815f5}
+            client-secret:  ${GITHUB_CLIENT_SECRET:8c77af28a85cd5bc2063e007cb48116296767152}
+
 jwt:
   secret: screte-value
   expiration: 86400000
