--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -79,9 +79,14 @@
 			<version>0.9.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -103,7 +108,7 @@
 				<version>3.3.1</version>
 				<configuration>
 					<to>
-						<image>asia-southeast1-docker.pkg.dev/proven-solstice-371106/cardinalis/${project.artifactId}</image>
+						<image>us-central1-docker.pkg.dev/proven-solstice-371106/cardinalis/${project.artifactId}</image>
 					</to>
 				</configuration>
 			</plugin>
