--- a/k8s/tweet-service.yaml
+++ b/k8s/tweet-service.yaml
@@ -40,9 +40,9 @@ spec:
             - name: USER_DB
               value: postgres
             - name: PASSWORD_DB
-              value: V8GFrDT8372Cjw3uAY80
+              value: i7AwMzU82NuTfDvn
             - name: HOST_DB
-              value: jdbc:postgresql://containers-us-west-143.railway.app:7614/railway
+              value: jdbc:postgresql://db.sfubsrtgfuorifqelqkz.supabase.co/postgres
 ---
 apiVersion: v1
 kind: Service
