--- a/k8s/user-service.yaml
+++ b/k8s/user-service.yaml
@@ -40,9 +40,9 @@ spec:
             - name: USER_DB
               value: postgres
             - name: PASSWORD_DB
-              value: OYl4vnn9ULlV3Sc3tDNj
+              value: vgMO3WI1X77lPzJr
             - name: HOST_DB
-              value: jdbc:postgresql://containers-us-west-59.railway.app:6571/railway
+              value: jdbc:postgresql://db.bwhnnmrmncogofkklpqg.supabase.co/postgres
 
 ---
 apiVersion: v1
