--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -8,9 +8,6 @@ services:
       - twitter-network
     ports:
       - '9002:9002'
-    environment:
-      - DOCKER_DEFAULT_PLATFORM=linux/amd64 docker-compose build
-
   user-service:
     container_name: user-service
     build: ./user-service
@@ -19,10 +16,7 @@ services:
     ports:
       - '8081:8081'
     environment:
-      - USER_DB=postgres
-      - PASSWORD_DB=OYl4vnn9ULlV3Sc3tDNj
-      - HOST_DB=jdbc:postgresql://containers-us-west-59.railway.app:6571/railway
-      - EUREKA_URL=http://eureka-server:9000/eureka
+      - HOST_DB=jdbc:postgresql://database-user:5432/cardinalis
     depends_on:
       - gateway
   tweet-service:
@@ -33,9 +27,7 @@ services:
     ports:
       - '8080:8080'
     environment:
-      - USER_DB=postgres
-      - PASSWORD_DB=V8GFrDT8372Cjw3uAY80
-      - HOST_DB=jdbc:postgresql://containers-us-west-143.railway.app:7614/railway
+      - HOST_DB=jdbc:postgresql://database-tweet:5432/cardinalis
     depends_on:
       - gateway
 networks:
