--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -20,3 +20,7 @@ jwt:
   secret: screte-value
   expiration: 86400000
 
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URL:http://localhost:9000/eureka}
