--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -1,5 +1,13 @@
 version: "3.1"
 services:
+  eureka-server:
+    container_name: eureka-server
+    build: ./eureka-server
+    restart: always
+    networks:
+      - twitter-network
+    ports:
+      - '9000:9000'
   gateway:
     container_name: gateway
     build: ./gateway
@@ -8,6 +16,13 @@ services:
       - twitter-network
     ports:
       - '9002:9002'
+    environment:
+      - EUREKA_URL=http://eureka-server:9000/eureka
+      - DOCKER_DEFAULT_PLATFORM=linux/amd64 docker-compose build
+    links:
+      - "eureka-server"
+    depends_on:
+      - eureka-server
   user-service:
     container_name: user-service
     build: ./user-service
@@ -17,7 +32,13 @@ services:
       - '8081:8081'
     environment:
       - HOST_DB=jdbc:postgresql://database-user:5432/cardinalis
+      - EUREKA_URL=http://eureka-server:9000/eureka
+      - USER_DB=postgres
+      - PASSWORD_DB=postgres
+    links:
+      - "eureka-server"
     depends_on:
+      - eureka-server
       - gateway
   tweet-service:
     container_name: tweet-service
@@ -28,7 +49,13 @@ services:
       - '8080:8080'
     environment:
       - HOST_DB=jdbc:postgresql://database-tweet:5432/cardinalis
+      - EUREKA_URL=http://eureka-server:9000/eureka
+      - USER_DB=postgres
+      - PASSWORD_DB=postgres
+    links:
+      - "eureka-server"
     depends_on:
+      - eureka-server
       - gateway
 networks:
   twitter-network:
