--- a/tweet-service/pom.xml
+++ b/tweet-service/pom.xml
@@ -50,8 +50,13 @@
 			<artifactId>spring-data-r2dbc</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.4</version>
+		</dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
