--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowed-origins: "http://localhost:5173"
+            allowed-origins: "*"
             allowed-methods: "*"
             allowed-headers: "*"
       routes:
