--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -6,6 +6,8 @@ metadata:
     # If the class annotation is not specified it defaults to "gce".
 #    kubernetes.io/ingress.class: "gce"
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "Access-Control-Allow-Origin: $http_origin";
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
