--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     password: ${PASSWORD_DB:131001}
     url: ${HOST_DB:jdbc:postgresql://localhost:3306/cardinalis}
     driver-class-name: ${DRIVER_DB:org.postgresql.Driver}
+  cloud:
+    service-registry:
+      auto-registration:
+        enabled: false
   jpa:
     hibernate:
       ddl-auto: create-drop
