cannot connect through tunnel

--- a/k8s/tweet-local-service.yaml
+++ b/k8s/tweet-local-service.yaml
@@ -53,10 +53,10 @@ metadata:
     spring-boot: "true"
 spec:
   ports:
-    - port: 8080
+    - port: 8081
       protocol: TCP
-      targetPort: 8080
+      targetPort: 8081
   selector:
     app: tweet-service
-  type: ClusterIP
+  type: NodePort
 
