--- a/k8s/ingress-local.yaml
+++ b/k8s/ingress-local.yaml
@@ -3,18 +3,21 @@ kind: Ingress
 metadata:
   name: gateway-local-ingress
   annotations:
-    # If the class annotation is not specified it defaults to "gce".
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "Access-Control-Allow-Origin: $http_origin";
-    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,
-      OPTIONS, DELETE, PATCH
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/service-upstream: "true"
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+#    kubernetes.io/ingress.class: "nginx"
+#    # If the class annotation is not specified it defaults to "gce".
+#    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+#    nginx.ingress.kubernetes.io/configuration-snippet: |
+#      more_set_headers "Access-Control-Allow-Origin: $http_origin";
+#    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+#    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,
+#      OPTIONS, DELETE, PATCH
+#    nginx.ingress.kubernetes.io/enable-cors: "true"
+#    nginx.ingress.kubernetes.io/service-upstream: "true"
 spec:
   rules:
-      - host: "cardinalis-be-local.live"
+      - host: cardinalis.internal
         http:
           paths:
             - path: /tweet
@@ -30,4 +33,5 @@ spec:
                 service:
                   name: user-service
                   port:
-                    number: 8080
+                    number: 8081
+
