--- a/k8s/user-local-service.yaml
+++ b/k8s/user-local-service.yaml
@@ -27,7 +27,7 @@ spec:
             periodSeconds: 5
             timeoutSeconds: 5
             failureThreshold: 10
-              # Configure the readiness probe
+            # Configure the readiness probe
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
@@ -40,9 +40,9 @@ spec:
             - name: USER_DB
               value: postgres
             - name: PASSWORD_DB
-              value: postgres
+              value: vgMO3WI1X77lPzJr
             - name: HOST_DB
-              value: jdbc:postgresql://10.99.4.125:3307/cardinalis # change ip here
+              value: jdbc:postgresql://db.bwhnnmrmncogofkklpqg.supabase.co/postgres
 
 ---
 apiVersion: v1
@@ -54,4 +54,9 @@ metadata:
     spring-boot: "true"
 spec:
   ports:
-    - port: 5984
+    - port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    app: user-service
+  type: NodePort
