--- a/k8s/local/user-local-service.yaml
+++ b/k8s/local/user-local-service.yaml
@@ -40,7 +40,7 @@ spec:
             - name: USER_DB
               value: postgres
             - name: PASSWORD_DB
-              value: vgMO3WI1X77lPzJr
+              value: postgres
             - name: HOST_DB
               value: jdbc:postgresql://10.99.4.125:3307/cardinalis # Change ip here
 
