Super fast deploy

--- a/k8s/local/ingress-local.yaml
+++ b/k8s/local/ingress-local.yaml
@@ -16,7 +16,7 @@ metadata:
 #    nginx.ingress.kubernetes.io/service-upstream: "true"
 spec:
   rules:
-      - host: cardinalis-be.com
+      - host: host.minikube.internal
         http:
           paths:
             - path: /tweet
