Auto stash before merge of "TA" and "origin/TA"

--- a/timeline-service/pom.xml
+++ b/timeline-service/pom.xml
@@ -100,7 +100,13 @@
 			<artifactId>javassist</artifactId>
 			<version>3.25.0-GA</version>
 		</dependency>
-
+		<!-- K8 stuff -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-kubernetes -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-kubernetes</artifactId>
+			<version>1.1.10.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
