Add spring gateway

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9002
+  port: 80
 spring:
   application:
     name: gateway
@@ -17,15 +17,15 @@ spring:
             allowed-origins: "*"
             allowed-methods: "*"
             allowed-headers: "*"
-      routes:
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/user/**,/auth/**
-        - id: tweet-service
-          uri: lb://tweet-service
-          predicates:
-            - Path=/tweet/**
+#      routes:
+#        - id: user-service
+#          uri: lb://user-service
+#          predicates:
+#            - Path=/user/**,/auth/**
+#        - id: tweet-service
+#          uri: lb://tweet-service
+#          predicates:
+#            - Path=/tweet/**
 jwt:
   secret: screte-value
 
