--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:17 as tweet-service
+FROM amazoncorretto:17 as gateway
 ARG JAR_FILE=target/gateway-0.0.1-SNAPSHOT.jar
 
 WORKDIR /opt/app
