--- a/k8s/local/ingress-local.yaml
+++ b/k8s/local/ingress-local.yaml
@@ -3,8 +3,7 @@ kind: Ingress
 metadata:
   name: gateway-local
   annotations:
-    ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: "nginx"
+    ingress.kubernetes.io/rewrite-target: /$2
     # If the class annotation is not specified it defaults to "gce".
 #    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
 #    nginx.ingress.kubernetes.io/configuration-snippet: |
@@ -19,6 +18,13 @@ spec:
       - host: cardinalis-be.com
         http:
           paths:
+            - path: /(/|$)(.*)
+              pathType: Prefix
+              backend:
+                service:
+                  name: gateway
+                  port:
+                    number: 80
             - path: /tweet
               pathType: Prefix
               backend:
