--- a/skaffoldLocal.yaml
+++ b/skaffoldLocal.yaml
@@ -13,9 +13,9 @@ build:
     jib:
       project: com.cardinalis:user-service
   - image: us-central1-docker.pkg.dev/proven-solstice-371106/cardinalis/gateway
-    context: tweet-service
+    context: gateway
     jib:
-      project: com.cardinalis:tweet-service
+      project: com.cardinalis:gateway
 manifests:
   rawYaml:
   - k8s/local/ingress-local.yaml
