--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -68,6 +68,11 @@
         </dependency>
         <!-- Service Cloud Gateway stuff -->
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-kubernetes-ribbon</artifactId>
+            <version>1.1.10.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
