--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -71,6 +71,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-kubernetes-client-loadbalancer</artifactId>
+        </dependency>
 <!--        -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
