--- a/skaffoldLocal.yaml
+++ b/skaffoldLocal.yaml
@@ -21,3 +21,4 @@ manifests:
   - k8s/local/tweet-local-service.yaml
   - k8s/local/user-local-service.yaml
   - k8s/local/gateway-local-service.yaml
+  - k8s/local/privileges.yaml
