--- a/k8s/cloud/gateway.yaml
+++ b/k8s/cloud/gateway.yaml
@@ -17,8 +17,25 @@ spec:
       containers:
         - name: gateway
           image: us-central1-docker.pkg.dev/proven-solstice-371106/cardinalis/gateway
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 150
+            periodSeconds: 5
+            timeoutSeconds: 5
+            failureThreshold: 10
+          # Configure the readiness probe
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 150
+            periodSeconds: 5
+            timeoutSeconds: 5
+            failureThreshold: 10
           ports:
-            - containerPort: 80
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -26,11 +43,14 @@ metadata:
   name: gateway
   labels:
     app: gateway
+
 spec:
   ports:
-    - port: 80
+    - name: http
+      port: 80
       protocol: TCP
-      targetPort: 80
+      targetPort: 8080
   selector:
     app: gateway
   type: LoadBalancer
+
