--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     username:  ${USER_DB:postgres}
     password: ${PASSWORD_DB:131001}
-    url: ${HOST_DB:jdbc:postgresql://localhost:3307/cardinalis}
+    url: ${HOST_DB:jdbc:postgresql://localhost:5432/cardinalis}
     driver-class-name: ${DRIVER_DB:org.postgresql.Driver}
   cloud:
     service-registry:
@@ -15,7 +15,7 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
