--- a/tweet-service/pom.xml
+++ b/tweet-service/pom.xml
@@ -69,8 +69,14 @@
 			<artifactId>spring-cloud-starter-kubernetes</artifactId>
 			<version>1.1.10.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.5</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
