--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
             - RewritePath=/timeline/(?<path>.*), /$\{path}
 
 jwt:
-  secret: screte-value
+  secret: dejavu
 
 management:
   endpoints:
