--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -32,6 +32,26 @@ spring:
             scope:
               - user:email
               - read:user
+
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      #      bootstrap-servers: host.minikube.internal:9092
+      group-id: group_id
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
+    producer:
+      bootstrap-servers: localhost:9092
+      #      bootstrap-servers: host.minikube.internal:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
 jwt:
   header: Authorization
   secret: dejavu
